# element-core

./: .clang-format  .clang-tidy  .clang-tidy-fix  .clang-tidy-test  .gitignore  CMakeLists.txt  README.md  test.ps1  vcpkg.json
.github/workflows/: ci-windows.yaml  ci-x11.yml  ci.yaml
include/: element.h  karin.h
include/element/: element_windows.h
include/element/color/: Color.h
include/element/font/: Font.h  Paragraph.h
include/element/geometry/: Point.h  Rectangle.h  Size.h
include/element/windows/: winText.h  winWindow.h  win_Window.h
include/element/windows/direct2d/: d2dDevice.h  d2dFactory.h  d2dWindow.h  dwriteFactory.h  dwriteText.h  dxgiDevice.h
include/karin/: karin_windows.h
include/karin/color/: Color.h
include/karin/font/: Font.h  Paragraph.h
include/karin/geometry/: Point.h  Rectangle.h  Size.h
include/karin/windows/: winText.h  winWindow.h
include/karin/windows/direct2d/: d2dDevice.h  d2dFactory.h  d2dWindow.h  dwriteFactory.h  dwriteText.h  dxgiDevice.h
include/karin/x11/: x11Window.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Component.h  Window.h
src/element/: CMakeLists.txt
src/element/color/: Color.cpp
src/element/core/: CMakeLists.txt  Component.cpp  Window.cpp
src/element/geometry/: Point.cpp  Rectangle.cpp  Size.cpp
src/element/windows/: CMakeLists.txt  winText.cpp  winWindow.cpp  win_Window.cpp  win_Window.h
src/element/windows/direct2d/: d2dWindow.cpp  dwriteText.cpp
src/karin/: CMakeLists.txt
src/karin/color/: Color.cpp
src/karin/geometry/: Point.cpp  Rectangle.cpp  Size.cpp
src/karin/windows/: winText.cpp  winWindow.cpp
src/karin/windows/direct2d/: d2dWindow.cpp  dwriteText.cpp
src/karin/x11/: x11Window.cpp
src/windows/: CMakeLists.txt  win_Window.cpp  win_Window.h
test/element/: CMakeLists.txt
test/element/color/: ColorTest.cpp
test/element/geometry/: PointTest.cpp  RectangleTest.cpp  SizeTest.cpp
test/element/windows/: winTextTest.cpp  winWindowTest.cpp  win_WindowTest.cpp
test/element/windows/direct2d/: d2dDeviceTest.cpp  d2dFactoryTest.cpp  d2dWindowTest.cpp  dwriteFactoryTest.cpp  dxgiDeviceTest.cpp
test/karin/: CMakeLists.txt
test/karin/color/: ColorTest.cpp
test/karin/geometry/: PointTest.cpp  RectangleTest.cpp  SizeTest.cpp
test/karin/windows/: winTextTest.cpp  winWindowTest.cpp
test/karin/windows/direct2d/: d2dDeviceTest.cpp  d2dFactoryTest.cpp  d2dWindowTest.cpp  dwriteFactoryTest.cpp  dxgiDeviceTest.cpp
test/karin/x11/: x11WindowTest.cpp
test/lists/: color.md  geometry.md  windows.md  x11.md
test/lists/geometry/: lists.md
test/lists/windows/: lists.md
test/utils/: WindowsGUITester.h  X11GUITester.h
